Created page with "{{Version|1.1}}"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -612,16 +612,14 @@
 </td>
 <td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_rotate.svg&amp;filetimestamp=20181210192821&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_rotate.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
-<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>
-<div lang="en" dir="ltr" class="mw-content-ltr">+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
-</div></td>
+<td style="width:12%; border-style:solid; border-width:1px; border-color:#aaaaaa"><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
+</td>
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td>
 <td><span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>+<span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td colspan="2">Use the mouse wheel to zoom in and out.
@@ -873,15 +871,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210415
+Cached time: 20260111210443
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.293 seconds
-Real time usage: 0.464 seconds
-Preprocessor visited node count: 1480/1000000
-Post&#8208;expand include size: 72074/2097152 bytes
-Template argument size: 27009/2097152 bytes
+CPU time usage: 0.313 seconds
+Real time usage: 0.524 seconds
+Preprocessor visited node count: 1479/1000000
+Post&#8208;expand include size: 72024/2097152 bytes
+Template argument size: 26959/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -889,19 +887,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   80.868      1 -total
- 12.78%   10.333      1 Template:Userdocnavi/cs
- 12.45%   10.071      8 Template:ASCII
-  8.02%    6.488      1 Template:SolidWorks_Navigation
-  5.64%    4.559      1 Template:OpenSCAD_Navigation
-  5.45%    4.404      1 Template:SiemensNX_Navigation
-  5.29%    4.279      1 Template:Touchpad_Navigation/cs
-  5.29%    4.274     69 Template:KEY
-  4.27%    3.455      1 Template:TOCright
-  4.26%    3.445      1 Template:Touchpad_Navigation
+100.00%  107.909      1 -total
+ 20.56%   22.190      1 Template:Userdocnavi/cs
+  9.58%   10.342      8 Template:ASCII
+  8.55%    9.221      1 Template:Touchpad_Navigation/cs
+  6.92%    7.472     69 Template:KEY
+  6.86%    7.405      1 Template:Navigation_menu_2
+  6.69%    7.215      1 Template:OpenSCAD_Navigation
+  5.10%    5.503      1 Template:Touchpad_Navigation
+  3.88%    4.191      2 Template:Docnav
+  3.84%    4.146      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210415 and revision id 1736316. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210443 and revision id 1736320. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
