--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -620,10 +620,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Use the mouse wheel to zoom in and out.
-
+</td>
+<td colspan="2">Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the middle mouse button, then move the pointer.
 </p>
@@ -871,15 +869,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210443
+Cached time: 20260111210518
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.313 seconds
-Real time usage: 0.524 seconds
-Preprocessor visited node count: 1479/1000000
-Post&#8208;expand include size: 72024/2097152 bytes
-Template argument size: 26959/2097152 bytes
+CPU time usage: 0.303 seconds
+Real time usage: 0.460 seconds
+Preprocessor visited node count: 1478/1000000
+Post&#8208;expand include size: 71993/2097152 bytes
+Template argument size: 26928/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -887,19 +885,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  107.909      1 -total
- 20.56%   22.190      1 Template:Userdocnavi/cs
-  9.58%   10.342      8 Template:ASCII
-  8.55%    9.221      1 Template:Touchpad_Navigation/cs
-  6.92%    7.472     69 Template:KEY
-  6.86%    7.405      1 Template:Navigation_menu_2
-  6.69%    7.215      1 Template:OpenSCAD_Navigation
-  5.10%    5.503      1 Template:Touchpad_Navigation
-  3.88%    4.191      2 Template:Docnav
-  3.84%    4.146      1 Template:SolidWorks_Navigation
+100.00%   86.162      1 -total
+ 12.28%   10.578      8 Template:ASCII
+ 11.11%    9.573      1 Template:Userdocnavi/cs
+  9.46%    8.149      1 Template:OpenSCAD_Navigation
+  6.30%    5.428      1 Template:SiemensNX_Navigation
+  5.66%    4.875      1 Template:MayaGesture_Navigation
+  5.10%    4.393      1 Template:TinkerCAD_Navigation
+  4.82%    4.157      1 Template:Gesture_Navigation
+  4.82%    4.156      1 Template:Blender_Navigation
+  4.79%    4.128      1 Template:SolidWorks_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210443 and revision id 1736320. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210517 and revision id 1736328. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
