--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -1,19 +1,17 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw FaceCenterLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+FaceCenterLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_FaceCenterLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw FaceCenterLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Ligne centrale &agrave; une face (67% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw: Linea centrale alla faccia (67% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Dodaj o&#347; &#347;ciany (67% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Dodaj o&#347; &#347;ciany (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1091;&#1102; &#1083;&#1080;&#1085;&#1080;&#1102; &#1082; &#1075;&#1088;&#1072;&#1085;&#1103;&#1084;" (17% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_FaceCenterLine.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#47732;&#51473;&#49900;&#49440; (67% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadranten Knoten</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">2LinienMittellinie</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -123,14 +121,12 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
 <p>Hilfslinien haben keine eigenen Eigenschaften, da sie keine Dokumentobjekte sind.
 </p><p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_Quadrants.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_Quadrants.html" title="TechDraw Quadrants/de">Quadranten Knoten</a></div>
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien</a>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">2LinienMittellinie</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
@@ -167,35 +163,35 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111145848
+Cached time: 20260111210509
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 412/1000000
-Post&#8208;expand include size: 29289/2097152 bytes
-Template argument size: 11364/2097152 bytes
+CPU time usage: 0.106 seconds
+Real time usage: 0.586 seconds
+Preprocessor visited node count: 410/1000000
+Post&#8208;expand include size: 29205/2097152 bytes
+Template argument size: 11308/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1655/5000000 bytes
+Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.292      1 -total
- 24.36%    6.648      1 Template:TechDraw_Tools_navi/de
- 17.78%    4.853      2 Template:PropertyView/de
- 14.08%    3.843      2 Template:Navigation_menu_2
- 10.05%    2.744      2 Template:Docnav/de
-  9.06%    2.472      1 Template:Version/de
-  8.41%    2.296      1 Template:GuiCommand/de
-  7.19%    1.962      3 Template:Button
-  6.84%    1.866      1 Template:Userdocnavi/de
-  6.65%    1.814      2 Template:Variable
+100.00%  145.318      1 -total
+ 25.56%   37.137      2 Template:PropertyView/de
+ 18.06%   26.247      1 Template:GuiCommand/de
+ 13.65%   19.831      1 Template:TechDraw_Tools_navi/de
+ 13.47%   19.581      2 Template:Variable
+ 11.45%   16.637      1 Template:Userdocnavi/de
+ 10.21%   14.830      3 Template:Button
+  6.04%    8.783      2 Template:Navigation_menu_2
+  4.75%    6.909      1 Template:MenuCommand
+  4.62%    6.718      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111145848 and revision id 1734453. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111210508 and revision id 1736326. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
