--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -625,10 +625,8 @@
 <p>Alternativn&#283; podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </p><p>Kliknut&iacute;m na prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i se zobrazen&iacute; znovu vycentruje na pozici ukazatele.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and the middle mouse button, then move the pointer.
@@ -864,15 +862,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210624
+Cached time: 20260111210646
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.300 seconds
-Real time usage: 0.463 seconds
-Preprocessor visited node count: 1476/1000000
-Post&#8208;expand include size: 71913/2097152 bytes
-Template argument size: 26848/2097152 bytes
+CPU time usage: 0.276 seconds
+Real time usage: 0.489 seconds
+Preprocessor visited node count: 1475/1000000
+Post&#8208;expand include size: 71865/2097152 bytes
+Template argument size: 26800/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -880,19 +878,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   97.194      1 -total
-  9.97%    9.694      1 Template:Userdocnavi/cs
-  8.92%    8.670      1 Template:OpenSCAD_Navigation
-  8.63%    8.385      1 Template:Touchpad_Navigation
-  8.18%    7.952      8 Template:ASCII
-  5.92%    5.756      1 Template:OpenCascade_Navigation
-  5.14%    4.996      1 Template:Revit_Navigation
-  5.03%    4.887      1 Template:CAD_Navigation
-  4.50%    4.378      2 Template:Docnav
-  4.17%    4.050      1 Template:Navigation_menu_2
+100.00%   99.460      1 -total
+  9.87%    9.813      1 Template:Userdocnavi/cs
+  9.81%    9.758      8 Template:ASCII
+  8.76%    8.713      2 Template:Docnav
+  7.41%    7.372      1 Template:OpenSCAD_Navigation
+  6.48%    6.443      9 Template:MenuCommand
+  5.69%    5.661      1 Template:OpenCascade_Navigation
+  5.46%    5.431      2 Template:Button
+  5.38%    5.350      1 Template:Blender_Navigation
+  5.10%    5.073     69 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210624 and revision id 1736334. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210646 and revision id 1736336. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
