--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -627,11 +627,9 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> and the middle mouse button, then move the pointer.
+</td>
+<td>Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="TinkerCAD_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="TinkerCAD_navigace">TinkerCAD navigace</span></h3>
@@ -862,15 +860,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210646
+Cached time: 20260111210710
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.276 seconds
-Real time usage: 0.489 seconds
-Preprocessor visited node count: 1475/1000000
-Post&#8208;expand include size: 71865/2097152 bytes
-Template argument size: 26800/2097152 bytes
+CPU time usage: 0.302 seconds
+Real time usage: 0.424 seconds
+Preprocessor visited node count: 1474/1000000
+Post&#8208;expand include size: 71837/2097152 bytes
+Template argument size: 26772/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -878,19 +876,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.460      1 -total
-  9.87%    9.813      1 Template:Userdocnavi/cs
-  9.81%    9.758      8 Template:ASCII
-  8.76%    8.713      2 Template:Docnav
-  7.41%    7.372      1 Template:OpenSCAD_Navigation
-  6.48%    6.443      9 Template:MenuCommand
-  5.69%    5.661      1 Template:OpenCascade_Navigation
-  5.46%    5.431      2 Template:Button
-  5.38%    5.350      1 Template:Blender_Navigation
-  5.10%    5.073     69 Template:KEY
+100.00%   66.737      1 -total
+ 13.10%    8.742      8 Template:ASCII
+  8.64%    5.764      1 Template:OpenSCAD_Navigation
+  8.48%    5.658      1 Template:Userdocnavi/cs
+  7.71%    5.147      1 Template:SiemensNX_Navigation
+  5.01%    3.341      1 Template:SolidWorks_Navigation
+  4.97%    3.315     69 Template:KEY
+  4.95%    3.304      1 Template:Revit_Navigation
+  4.61%    3.074      1 Template:Blender_Navigation
+  4.13%    2.754      1 Template:Gesture_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210646 and revision id 1736336. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210710 and revision id 1736338. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
