--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -632,7 +632,7 @@
 </td></tr></tbody></table>
 <p><span id="TinkerCAD_navigation"></span>
 </p>
-<h3><span class="mw-headline" id="TinkerCAD_navigace">TinkerCAD navigace</span></h3>
+<h3><span class="mw-headline" id="Navigace_TinkerCAD">Navigace TinkerCAD</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The TinkerCAD navigation style was modeled after <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Tinkercad">TinkerCAD</a>.
 </p>
@@ -860,12 +860,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210710
+Cached time: 20260111210724
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.302 seconds
-Real time usage: 0.424 seconds
+CPU time usage: 0.267 seconds
+Real time usage: 0.333 seconds
 Preprocessor visited node count: 1474/1000000
 Post&#8208;expand include size: 71837/2097152 bytes
 Template argument size: 26772/2097152 bytes
@@ -876,19 +876,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   66.737      1 -total
- 13.10%    8.742      8 Template:ASCII
-  8.64%    5.764      1 Template:OpenSCAD_Navigation
-  8.48%    5.658      1 Template:Userdocnavi/cs
-  7.71%    5.147      1 Template:SiemensNX_Navigation
-  5.01%    3.341      1 Template:SolidWorks_Navigation
-  4.97%    3.315     69 Template:KEY
-  4.95%    3.304      1 Template:Revit_Navigation
-  4.61%    3.074      1 Template:Blender_Navigation
-  4.13%    2.754      1 Template:Gesture_Navigation
+100.00%   50.053      1 -total
+ 16.68%    8.347      8 Template:ASCII
+ 10.06%    5.036      1 Template:Userdocnavi/cs
+  6.02%    3.011     69 Template:KEY
+  6.01%    3.010      1 Template:OpenSCAD_Navigation
+  4.57%    2.286      1 Template:Gesture_Navigation
+  4.52%    2.261      1 Template:Blender_Navigation
+  4.37%    2.187      1 Template:CAD_Navigation
+  4.35%    2.178      1 Template:Navigation_menu_2
+  3.99%    1.996      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210710 and revision id 1736338. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210724 and revision id 1736340. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
