Updated page Package Metadata

--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -169,10 +169,29 @@
 <li>version_gt="VERSION" (optional): The dependency to the package is restricted to versions greater than the stated version number.</li>
 <li>optional="true|false": If "optional" is "true", then the dependency is treated as optional when the Addon is installed using the Addon Manager. In general this means that a failure to install the dependency does not prevent the Addon from installing, and the user may be prompted about whether they want to install it. Versions of FreeCAD prior to 0.21 do not recognize this attribute and will ignore it.</li>
 <li>type="automatic|addon|internal|python": Optional, defaults to "automatic". Indicates what this dependency statement refers to. "addon" is for external addons, "internal" is for internal workbenches and "python" indicates a Python package dependency. Versions of FreeCAD prior to 0.21 do not use this attribute, and "automatic" is always assumed.</li></ul>
-<h5><span class="mw-headline" id="Type_:_Internal">Type&nbsp;: Internal</span></h5>
+<h5><span class="mw-headline" id="Type:_internal">Type: internal</span></h5>
 <p>The following internal workbench types are available:
-</p><p><code>assembly</code> <code>bim</code> <code>cam</code> <code>draft</code> <code>fem</code> <code>import</code> <code>material</code> <code>mesh</code> <code>openscad</code> <code>part</code> <code>partdesign</code> <code>plot</code> <code>points</code> <code>reverseengineering</code> <code>robot</code> <code>sketcher</code> <code>spreadsheet</code> <code>techdraw</code> <code>tux</code> <code>web</code>
 </p>
+<ul><li><code>assembly</code></li>
+<li><code>bim</code></li>
+<li><code>cam</code></li>
+<li><code>draft</code></li>
+<li><code>fem</code></li>
+<li><code>import</code></li>
+<li><code>material</code></li>
+<li><code>mesh</code></li>
+<li><code>openscad</code></li>
+<li><code>part</code></li>
+<li><code>partdesign</code></li>
+<li><code>plot</code></li>
+<li><code>points</code></li>
+<li><code>reverseengineering</code></li>
+<li><code>robot</code></li>
+<li><code>sketcher</code></li>
+<li><code>spreadsheet</code></li>
+<li><code>techdraw</code></li>
+<li><code>tux</code></li>
+<li><code>web</code></li></ul>
 <h3><span id=".3Cconflict.3E"></span><span class="mw-headline" id="&lt;conflict&gt;">&lt;conflict&gt;</span></h3>
 <p>Multiple allowed
 </p><p>Declares a package name with which this package conflicts. This package and the conflicting package should not be installed at the same time.
@@ -336,12 +355,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260109020103
+Cached time: 20260111210726
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.093 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 638/1000000
 Post&#8208;expand include size: 7217/2097152 bytes
 Template argument size: 2557/2097152 bytes
@@ -352,18 +371,18 @@ Unstrip post&#8208;expand size: 8159/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.275      1 -total
- 25.30%    3.865      1 Template:Powerdocnavi
- 13.78%    2.105      1 Template:Navigation_menu_2
- 13.62%    2.081     37 Template:Incode
- 13.43%    2.052      2 Template:VersionNote
-  9.43%    1.441      1 Template:Code
-  9.00%    1.374      1 Template:TOCright
-  6.48%    0.990      3 Template:Version
-  5.91%    0.903      1 Template:MenuCommand
+100.00%   16.804      1 -total
+ 22.03%    3.702      1 Template:Powerdocnavi
+ 16.54%    2.780     37 Template:Incode
+ 11.66%    1.960      1 Template:Navigation_menu_2
+ 10.91%    1.833      2 Template:VersionNote
+ 10.35%    1.740      1 Template:Code
+  8.72%    1.465      3 Template:Version
+  8.50%    1.428      1 Template:TOCright
+  6.64%    1.116      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260109020112 and revision id 1730255. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260111210736 and revision id 1736341. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
