Created page with "{{TinkerCAD_Navigation |Select_name=Výběr |Zoom_name=Zoom |Rotate_view_name=Rotace pohledu |Pan_name=Posun pohledu"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -635,17 +635,15 @@
 <h3><span class="mw-headline" id="Navigace_TinkerCAD">Navigace TinkerCAD</span></h3>
 <p>Styl navigace TinkerCAD byl vytvo&#345;en podle vzoru <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Tinkercad">TinkerCAD</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="mousemodel" style="border-style:solid; border-width:1px; border-color:#aaaaaa; padding:1px; border-spacing:18px 0px; width:100%;">
 <tbody><tr>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Select
+<th style="width:20%; background: #ededff; padding:2px 2px;">V&yacute;b&#283;r
 </th>
 <th style="width:20%; background: #ededff; padding:2px 2px;">Zoom
 </th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Rotate view
+<th style="width:20%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
-<th style="width:20%; background: #ededff; padding:2px 2px;">Pan
-
+<th style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></th></tr>
 <tr style="text-align:center;">
@@ -681,7 +679,7 @@
 </div></td>
 <td>Hold the middle mouse button, then move the pointer.
 </td></tr></tbody></table>
-</div>
+
 <p><span id="Touchpad_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Touchpad_Navigace">Touchpad Navigace</span></h3>
@@ -858,15 +856,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210751
+Cached time: 20260111210825
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.298 seconds
-Real time usage: 0.531 seconds
-Preprocessor visited node count: 1473/1000000
-Post&#8208;expand include size: 71837/2097152 bytes
-Template argument size: 26772/2097152 bytes
+CPU time usage: 0.325 seconds
+Real time usage: 0.725 seconds
+Preprocessor visited node count: 1472/1000000
+Post&#8208;expand include size: 71844/2097152 bytes
+Template argument size: 26779/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -874,19 +872,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   94.204      1 -total
- 12.02%   11.324      1 Template:Userdocnavi/cs
- 10.43%    9.822      8 Template:ASCII
-  9.31%    8.769      1 Template:Touchpad_Navigation/cs
-  7.35%    6.923      1 Template:Navigation_menu_2
-  6.71%    6.317      1 Template:SiemensNX_Navigation
-  6.26%    5.897      1 Template:SolidWorks_Navigation
-  6.14%    5.787      1 Template:OpenSCAD_Navigation
-  5.68%    5.354      1 Template:Touchpad_Navigation
-  4.43%    4.174      1 Template:MayaGesture_Navigation
+100.00%  112.993      1 -total
+ 12.18%   13.757      1 Template:Userdocnavi/cs
+  9.46%   10.691      1 Template:SiemensNX_Navigation
+  8.44%    9.532      1 Template:OpenInventor_Navigation
+  7.91%    8.934      1 Template:OpenSCAD_Navigation
+  7.71%    8.713      8 Template:ASCII
+  5.90%    6.672      1 Template:MayaGesture_Navigation
+  5.27%    5.954      2 Template:Version
+  5.03%    5.683      1 Template:Gesture_Navigation
+  4.38%    4.951      1 Template:Revit_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210751 and revision id 1736343. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210824 and revision id 1736347. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
