--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -13,7 +13,6 @@
     <div><a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Men&uuml;eintrag
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Mittellinie zu Fl&auml;che(n) hinzuf&uuml;gen
+<td class="ctEven">TechDraw &rarr; Linien hinzuf&uuml;gen &rarr; Mittellinie zwischen zwei Fl&auml;chen
 </td></tr>
 <tr>
 <th class="ctOdd">Arbeitsbereich
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
@@ -163,15 +161,15 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210509
+Cached time: 20260111210917
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.586 seconds
-Preprocessor visited node count: 410/1000000
-Post&#8208;expand include size: 29205/2097152 bytes
-Template argument size: 11308/2097152 bytes
+CPU time usage: 0.121 seconds
+Real time usage: 0.275 seconds
+Preprocessor visited node count: 409/1000000
+Post&#8208;expand include size: 29199/2097152 bytes
+Template argument size: 11302/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -179,19 +177,19 @@ Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  145.318      1 -total
- 25.56%   37.137      2 Template:PropertyView/de
- 18.06%   26.247      1 Template:GuiCommand/de
- 13.65%   19.831      1 Template:TechDraw_Tools_navi/de
- 13.47%   19.581      2 Template:Variable
- 11.45%   16.637      1 Template:Userdocnavi/de
- 10.21%   14.830      3 Template:Button
-  6.04%    8.783      2 Template:Navigation_menu_2
-  4.75%    6.909      1 Template:MenuCommand
-  4.62%    6.718      1 Template:KEY
+100.00%   52.397      1 -total
+ 22.76%   11.928      1 Template:TechDraw_Tools_navi/de
+ 14.10%    7.386      2 Template:PropertyView/de
+ 12.10%    6.342      2 Template:Navigation_menu_2
+ 11.37%    5.957      1 Template:Version/de
+ 11.26%    5.899      1 Template:Userdocnavi/de
+ 10.27%    5.381      2 Template:Docnav/de
+  9.21%    4.823      1 Template:KEY
+  8.58%    4.498      1 Template:GuiCommand/de
+  6.88%    3.603      2 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111210508 and revision id 1736326. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111210916 and revision id 1736357. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
