--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -644,8 +644,7 @@
 <th style="width:20%; background: #ededff; padding:2px 2px;">Rotace pohledu
 </th>
 <th style="width:20%; background: #ededff; padding:2px 2px;">Posun pohledu
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+</th></tr>
 <tr style="text-align:center;">
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Hand_cursor.png&amp;filetimestamp=20240917104542&amp;.html" class="mw-file-description"><img src="../File/Hand_cursor.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="24" data-file-height="24"></a></span>
 </td>
@@ -665,8 +664,7 @@
 <td><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Mouse_MMB_hold.svg&amp;filetimestamp=20181210192909&amp;.html" class="mw-file-description"><img src="../File/Mouse_MMB_hold.svg" decoding="async" width="70" height="100" class="mw-file-element" data-file-width="70" data-file-height="100"></a></span>
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
-<td>Press the left mouse button over an object you want to select.
-
+<td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Use the mouse wheel to zoom in and out.
@@ -856,15 +854,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210825
+Cached time: 20260111210919
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.325 seconds
-Real time usage: 0.725 seconds
-Preprocessor visited node count: 1472/1000000
-Post&#8208;expand include size: 71844/2097152 bytes
-Template argument size: 26779/2097152 bytes
+CPU time usage: 0.346 seconds
+Real time usage: 0.983 seconds
+Preprocessor visited node count: 1471/1000000
+Post&#8208;expand include size: 71794/2097152 bytes
+Template argument size: 26729/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -872,19 +870,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  112.993      1 -total
- 12.18%   13.757      1 Template:Userdocnavi/cs
-  9.46%   10.691      1 Template:SiemensNX_Navigation
-  8.44%    9.532      1 Template:OpenInventor_Navigation
-  7.91%    8.934      1 Template:OpenSCAD_Navigation
-  7.71%    8.713      8 Template:ASCII
-  5.90%    6.672      1 Template:MayaGesture_Navigation
-  5.27%    5.954      2 Template:Version
-  5.03%    5.683      1 Template:Gesture_Navigation
-  4.38%    4.951      1 Template:Revit_Navigation
+100.00%  307.556      1 -total
+ 18.10%   55.671      8 Template:ASCII
+  9.38%   28.846     69 Template:KEY
+  7.08%   21.783      1 Template:Userdocnavi/cs
+  6.64%   20.421      1 Template:Gesture_Navigation
+  6.52%   20.051      1 Template:OpenSCAD_Navigation
+  6.50%   20.004      1 Template:CAD_Navigation
+  5.96%   18.345      1 Template:Blender_Navigation
+  5.53%   17.016      1 Template:SiemensNX_Navigation
+  4.20%   12.907      1 Template:OpenCascade_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210824 and revision id 1736347. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210918 and revision id 1736359. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
