Created page with "|Zoom_text=Pomocí kolečka myši můžete přibližovat a oddalovat pohled."

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -665,10 +665,8 @@
 </td></tr>
 <tr style="vertical-align:top; background:#efefef;">
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Use the mouse wheel to zoom in and out.
-
+</td>
+<td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Press the right mouse button, then move the pointer.
@@ -854,15 +852,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210919
+Cached time: 20260111210946
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.346 seconds
-Real time usage: 0.983 seconds
-Preprocessor visited node count: 1471/1000000
-Post&#8208;expand include size: 71794/2097152 bytes
-Template argument size: 26729/2097152 bytes
+CPU time usage: 0.297 seconds
+Real time usage: 0.498 seconds
+Preprocessor visited node count: 1470/1000000
+Post&#8208;expand include size: 71763/2097152 bytes
+Template argument size: 26698/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -870,19 +868,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  307.556      1 -total
- 18.10%   55.671      8 Template:ASCII
-  9.38%   28.846     69 Template:KEY
-  7.08%   21.783      1 Template:Userdocnavi/cs
-  6.64%   20.421      1 Template:Gesture_Navigation
-  6.52%   20.051      1 Template:OpenSCAD_Navigation
-  6.50%   20.004      1 Template:CAD_Navigation
-  5.96%   18.345      1 Template:Blender_Navigation
-  5.53%   17.016      1 Template:SiemensNX_Navigation
-  4.20%   12.907      1 Template:OpenCascade_Navigation
+100.00%  110.429      1 -total
+ 19.21%   21.214      1 Template:OpenSCAD_Navigation
+  8.66%    9.564      1 Template:OpenCascade_Navigation
+  8.16%    9.010      1 Template:Userdocnavi/cs
+  7.87%    8.693      1 Template:SolidWorks_Navigation
+  7.83%    8.647      8 Template:ASCII
+  6.34%    7.002      1 Template:Touchpad_Navigation/cs
+  4.94%    5.453      1 Template:SiemensNX_Navigation
+  4.79%    5.292      1 Template:TinkerCAD_Navigation
+  4.27%    4.718      1 Template:OpenInventor_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210918 and revision id 1736359. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210946 and revision id 1736374. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
