--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -667,10 +667,8 @@
 <td>Stiskn&#283;te lev&eacute; tla&#269;&iacute;tko my&scaron;i nad objektem, kter&yacute; chcete vybrat.
 </td>
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Press the right mouse button, then move the pointer.
-
+</td>
+<td>Stiskn&#283;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td>
 <td>Hold the middle mouse button, then move the pointer.
@@ -852,15 +850,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210946
+Cached time: 20260111211050
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.297 seconds
-Real time usage: 0.498 seconds
-Preprocessor visited node count: 1470/1000000
-Post&#8208;expand include size: 71763/2097152 bytes
-Template argument size: 26698/2097152 bytes
+CPU time usage: 0.278 seconds
+Real time usage: 0.372 seconds
+Preprocessor visited node count: 1469/1000000
+Post&#8208;expand include size: 71717/2097152 bytes
+Template argument size: 26652/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -868,19 +866,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  110.429      1 -total
- 19.21%   21.214      1 Template:OpenSCAD_Navigation
-  8.66%    9.564      1 Template:OpenCascade_Navigation
-  8.16%    9.010      1 Template:Userdocnavi/cs
-  7.87%    8.693      1 Template:SolidWorks_Navigation
-  7.83%    8.647      8 Template:ASCII
-  6.34%    7.002      1 Template:Touchpad_Navigation/cs
-  4.94%    5.453      1 Template:SiemensNX_Navigation
-  4.79%    5.292      1 Template:TinkerCAD_Navigation
-  4.27%    4.718      1 Template:OpenInventor_Navigation
+100.00%   59.232      1 -total
+ 13.50%    7.996      8 Template:ASCII
+  8.86%    5.249      1 Template:Userdocnavi/cs
+  6.40%    3.788      1 Template:OpenSCAD_Navigation
+  5.54%    3.283     69 Template:KEY
+  5.14%    3.046      1 Template:Touchpad_Navigation/cs
+  4.94%    2.924      1 Template:OpenCascade_Navigation
+  4.68%    2.772      1 Template:Gesture_Navigation
+  4.64%    2.749      1 Template:SolidWorks_Navigation
+  4.58%    2.713      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111210946 and revision id 1736374. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211050 and revision id 1736376. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
