Created page with "|Pan_text=Podržte prostřední tlačítko myši a přesuňte ukazatel. }}"

--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -669,11 +669,9 @@
 <td>Pomoc&iacute; kole&#269;ka my&scaron;i m&#367;&#382;ete p&#345;ibli&#382;ovat a oddalovat pohled.
 </td>
 <td>Stiskn&#283;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then move the pointer.
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 </td></tr></tbody></table>
-
 <p><span id="Touchpad_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Touchpad_Navigace">Touchpad Navigace</span></h3>
@@ -850,15 +848,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211050
+Cached time: 20260111211111
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.278 seconds
-Real time usage: 0.372 seconds
-Preprocessor visited node count: 1469/1000000
-Post&#8208;expand include size: 71717/2097152 bytes
-Template argument size: 26652/2097152 bytes
+CPU time usage: 0.305 seconds
+Real time usage: 0.590 seconds
+Preprocessor visited node count: 1468/1000000
+Post&#8208;expand include size: 71676/2097152 bytes
+Template argument size: 26611/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -866,19 +864,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.232      1 -total
- 13.50%    7.996      8 Template:ASCII
-  8.86%    5.249      1 Template:Userdocnavi/cs
-  6.40%    3.788      1 Template:OpenSCAD_Navigation
-  5.54%    3.283     69 Template:KEY
-  5.14%    3.046      1 Template:Touchpad_Navigation/cs
-  4.94%    2.924      1 Template:OpenCascade_Navigation
-  4.68%    2.772      1 Template:Gesture_Navigation
-  4.64%    2.749      1 Template:SolidWorks_Navigation
-  4.58%    2.713      1 Template:Blender_Navigation
+100.00%  127.734      1 -total
+ 14.26%   18.216      1 Template:Userdocnavi/cs
+ 10.06%   12.851      8 Template:ASCII
+  6.23%    7.963      1 Template:Navigation_menu_2
+  5.93%    7.579      1 Template:SiemensNX_Navigation
+  5.89%    7.526      1 Template:MayaGesture_Navigation
+  5.84%    7.459      1 Template:Gesture_Navigation
+  5.20%    6.641      1 Template:Touchpad_Navigation
+  4.78%    6.105     69 Template:KEY
+  4.74%    6.057      1 Template:Blender_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211050 and revision id 1736376. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211110 and revision id 1736380. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
