Updated page TechDraw FaceCenterLine/de

--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -62,15 +62,13 @@
 <p><span id="Usage_create"></span>
 </p>
 <h2><span id="Anwendung.2C_Erstellen"></span><span class="mw-headline" id="Anwendung,_Erstellen">Anwendung, Erstellen</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Eine oder mehrere Fl&auml;chen in einer Ansicht ausw&auml;hlen.</li>
 <li>Es gibt mehrere M&ouml;glichkeiten, das Werkzeug aufzurufen:
-<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zu Fl&auml;che(n) hinzuf&uuml;gen</a></span> dr&uuml;cken.</li>
-<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zu Fl&auml;che(n) hinzuf&uuml;gen</b> ausw&auml;hlen.</li></ul></li>
-<li>Ein Aufgaben-Bereich wird ge&ouml;ffnet. Siehe <a href="#Optionen">Optionen</a> f&uuml;r weitere Informationen.</li>
+<ul><li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Mittellinie zwischen zwei Fl&auml;chen</a></span> dr&uuml;cken.</li>
+<li>Den Men&uuml;eintrag <b>TechDraw &rarr; Ma&szlig;eintr&auml;ge &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen zwei Fl&auml;chen</b> ausw&auml;hlen.</li></ul></li>
+<li>Das Aufgaben-Fenster wird ge&ouml;ffnet. Siehe <a href="#Options">Optionen</a> f&uuml;r weitere Informationen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> zum Best&auml;tigen dr&uuml;cken.</li>
 <li>Eine Mittellinie wird am Mittelpunkt des Begrenzungsrahmens der ausgew&auml;hlten Fl&auml;che(n) hinzugef&uuml;gt.</li></ol>
-</div>
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
@@ -161,15 +159,15 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211136
+Cached time: 20260111211406
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.129 seconds
-Real time usage: 0.302 seconds
-Preprocessor visited node count: 409/1000000
-Post&#8208;expand include size: 29073/2097152 bytes
-Template argument size: 11239/2097152 bytes
+CPU time usage: 0.119 seconds
+Real time usage: 0.213 seconds
+Preprocessor visited node count: 408/1000000
+Post&#8208;expand include size: 29067/2097152 bytes
+Template argument size: 11233/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -177,19 +175,19 @@ Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.079      1 -total
- 20.23%   14.786      1 Template:TechDraw_Tools_navi/de
- 16.29%   11.903      2 Template:PropertyView/de
- 13.20%    9.650      1 Template:GuiCommand/de
- 12.08%    8.828      1 Template:Userdocnavi/de
-  9.92%    7.251      2 Template:Navigation_menu_2
-  9.06%    6.621      1 Template:Caption
-  8.12%    5.933      1 Template:Version/de
-  6.75%    4.931      2 Template:Docnav/de
-  6.48%    4.736      2 Template:Variable
+100.00%   47.910      1 -total
+ 23.70%   11.354      1 Template:TechDraw_Tools_navi/de
+ 19.34%    9.264      2 Template:PropertyView/de
+ 12.60%    6.035      2 Template:Navigation_menu_2
+  9.43%    4.518      1 Template:GuiCommand/de
+  8.52%    4.083      2 Template:Docnav/de
+  7.62%    3.649      1 Template:Caption
+  7.33%    3.510      3 Template:Button
+  7.00%    3.355      1 Template:Userdocnavi/de
+  7.00%    3.352      1 Template:Version/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211136 and revision id 1736384. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211406 and revision id 1736396. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
