Robust_MCP_Bridge_Workbench

--- a/wiki/External_workbenches.html
+++ b/wiki/External_workbenches.html
@@ -532,23 +532,6 @@
 <td><span typeof="mw:File"><a href="index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td></tr>
 <tr>
-<td><span typeof="mw:File"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111005300&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</td>
-<td><a href="index.php?title=Robust_MCP_Bridge_Workbench&amp;action=edit&amp;redlink=1.html" class="new" title="Robust MCP Bridge Workbench (page does not exist)">Robust MCP Bridge</a>
-</td>
-<td>Automation
-</td>
-<td>Bridge workbench designed to provide an interface between FreeCAD and the [Robust MCP Server](<a rel="nofollow" class="external free" href="https://pypi.org/project/freecad-robust-mcp/">https://pypi.org/project/freecad-robust-mcp/</a>) to enabling AI assistants (like Claude) to control FreeCAD via the Model Context Protocol (MCP). Provides XML-RPC and JSON-RPC interfaces for external automation.
-</td>
-<td>spkane
-</td>
-<td><a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-robust-mcp-and-more">https://github.com/spkane/freecad-robust-mcp-and-more</a>
-</td>
-<td><span typeof="mw:File"><a href="index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</td>
-<td>
-</td></tr>
-<tr>
 <td><span typeof="mw:File"><a href="index.php?title=ModernUI_workbench_icon.svg&amp;filetimestamp=20210101155150&amp;.html" class="mw-file-description"><img src="File/ModernUI_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="ModernUI_Workbench.html" title="ModernUI Workbench">ModernUI</a>
@@ -1189,6 +1172,23 @@
 <td>furti
 </td>
 <td><a rel="nofollow" class="external free" href="https://github.com/furti/FreeCAD-Reporting">https://github.com/furti/FreeCAD-Reporting</a>
+</td>
+<td><span typeof="mw:File"><a href="index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</td>
+<td>
+</td></tr>
+<tr>
+<td><span typeof="mw:File"><a href="index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="File/FreecadRobustMCPBridge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</td>
+<td><a href="Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench">Robust MCP Bridge</a>
+</td>
+<td>Information and data
+</td>
+<td>The Bridge workbench is designed to provide an interface between FreeCAD and the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> to enable AI assistants (like Claude) to control FreeCAD via the Model Context Protocol (MCP). It povides XML-RPC and JSON-RPC interfaces for external automation.
+</td>
+<td>spkane
+</td>
+<td><a rel="nofollow" class="external free" href="https://github.com/spkane/freecad-robust-mcp-and-more">https://github.com/spkane/freecad-robust-mcp-and-more</a>
 </td>
 <td><span typeof="mw:File"><a href="index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
@@ -2070,13 +2070,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111005638
+Cached time: 20260111211444
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.339 seconds
-Real time usage: 0.389 seconds
-Preprocessor visited node count: 751/1000000
+CPU time usage: 0.361 seconds
+Real time usage: 0.450 seconds
+Preprocessor visited node count: 749/1000000
 Post&#8208;expand include size: 7436/2097152 bytes
 Template argument size: 2156/2097152 bytes
 Highest expansion depth: 5/100
@@ -2086,17 +2086,17 @@ Unstrip post&#8208;expand size: 2786/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.730      1 -total
- 27.82%    2.985      1 Template:Userdocnavi
- 23.64%    2.537      2 Template:Docnav
- 16.90%    1.814      1 Template:Navigation_menu_2
- 13.63%    1.463      1 Template:Version
- 10.24%    1.099      2 Template:FileName
-  9.91%    1.063      1 Template:KEY
-  8.62%    0.925      1 Template:TOCright
+100.00%   11.028      1 -total
+ 45.52%    5.020      1 Template:Userdocnavi
+ 23.49%    2.591      1 Template:Navigation_menu_2
+ 17.29%    1.907      2 Template:Docnav
+  9.81%    1.082      2 Template:FileName
+  7.55%    0.833      1 Template:TOCright
+  7.51%    0.828      1 Template:Version
+  6.78%    0.748      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61481-0!canonical and timestamp 20260111005638 and revision id 1732058. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:61481-0!canonical and timestamp 20260111211444 and revision id 1736397. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
