Updated page TechDraw FaceCenterLine/de

--- a/wiki/de/TechDraw_FaceCenterLine.html
+++ b/wiki/de/TechDraw_FaceCenterLine.html
@@ -72,10 +72,7 @@
 <p><span id="Usage_edit"></span>
 </p>
 <h2><span id="Anwendung.2C_Bearbeiten"></span><span class="mw-headline" id="Anwendung,_Bearbeiten">Anwendung, Bearbeiten</span></h2>
-<p>Jedes der Mittellinienwerkzeuge (<span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zu Fl&auml;che(n) hinzuf&uuml;gen, 
-<span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien hinzuf&uuml;gen</a> oder
-<span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">Mittellinie zwischen 2 Punkten hinzuf&uuml;gen</a>)
-kann verwendet werden, um Mittellinien zu bearbeiten.
+<p>Jedes der Mittellinienwerkzeuge (<span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Mittellinie zwischen zwei Fl&auml;chen, <span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien</a> oder <span typeof="mw:File"><a href="../index.php?title=TechDraw_2PointCenterLine.svg&amp;filetimestamp=20241127175331&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2PointCenterLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2PointCenterLine.html" title="TechDraw 2PointCenterLine/de">Mittellinie zwischen 2 Punkten</a>) kann verwendet werden, um Mittellinien zu bearbeiten.
 </p>
 <ol><li>Eine Mittellinie ausw&auml;hlen.</li>
 <li>Ein beliebiges Mittellinienwerkzeug aufrufen.</li>
@@ -159,12 +156,12 @@ kann verwendet werden, um Mittellinien zu bearbeiten.
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211406
+Cached time: 20260111211634
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.213 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 408/1000000
 Post&#8208;expand include size: 29067/2097152 bytes
 Template argument size: 11233/2097152 bytes
@@ -175,19 +172,19 @@ Unstrip post&#8208;expand size: 1662/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.910      1 -total
- 23.70%   11.354      1 Template:TechDraw_Tools_navi/de
- 19.34%    9.264      2 Template:PropertyView/de
- 12.60%    6.035      2 Template:Navigation_menu_2
-  9.43%    4.518      1 Template:GuiCommand/de
-  8.52%    4.083      2 Template:Docnav/de
-  7.62%    3.649      1 Template:Caption
-  7.33%    3.510      3 Template:Button
-  7.00%    3.355      1 Template:Userdocnavi/de
-  7.00%    3.352      1 Template:Version/de
+100.00%   30.669      1 -total
+ 22.12%    6.784      1 Template:TechDraw_Tools_navi/de
+ 14.77%    4.529      2 Template:PropertyView/de
+ 13.40%    4.111      2 Template:Navigation_menu_2
+ 11.70%    3.587      2 Template:Docnav/de
+ 11.58%    3.551      1 Template:GuiCommand/de
+  7.00%    2.147      3 Template:Button
+  6.94%    2.127      1 Template:Version/de
+  6.66%    2.044      1 Template:Caption
+  6.51%    1.996      1 Template:Userdocnavi/de
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211406 and revision id 1736396. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:177747-0!canonical and timestamp 20260111211634 and revision id 1736423. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
